// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InjectCSSRuntimeInitPlugin fixture: alt 1`] = `
"/*__MASTER_CSS_RUNTIME_INJECTED__*/
import { initCSSRuntime } from '@master/css-runtime'
import config from './master.css.js'
initCSSRuntime(config)
console.log('World')"
`;

exports[`InjectCSSRuntimeInitPlugin fixture: basic 1`] = `
"/*__MASTER_CSS_RUNTIME_INJECTED__*/
import { initCSSRuntime } from '@master/css-runtime'
import config from './master.css.js'
initCSSRuntime(config)
console.log('Hello')"
`;
